# manga-reader

./: .env  .gitignore  compose.yaml  manga-reader.service  start.sh
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py
backend/app/service/: files.py
backend/app/util/: __init__.py
frontend/: Cargo.toml  Dockerfile
frontend/src/: main.rs
