[package]
name = "reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
reqwest = { version = "0.11", features = ["json"] }
stylist = { version = "0.13", features = ["yew_integration", "parser"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
yew = { version = "0.21", features = ["csr"] }
