[package]
name = "reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
log = "0.4.20"
gloo-net = { version = "0.5.0", features = ["http"] }
web-sys = { version = "0.3.67", features = ["AbortController"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18" 

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
